--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RyBy's Tracker</title>
+    <title>Monkey Lifts</title>
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="index.css">
     
