--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>
-    // Initialize Eruda
- //   eruda.init();
+     Initialize Eruda
+    eruda.init();
     </script>
     
      <script src="main.js"></script>
